tom tom maps css added so it no longer overflows

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,7 +55,7 @@ main {
 }
 
 .map {
-  height: 420px;
+  height: 100%;
   width: 100%;
   padding: 0;
   margin: 0;
